exersare componente directive structurale

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,8 @@
 <app-home-page></app-home-page> -->
 <!-- <app-one-way-demo></app-one-way-demo> -->
 <!-- <app-two-way-demo></app-two-way-demo> -->
-<app-event-prop-binding></app-event-prop-binding>
+
+<!-- <app-event-prop-binding></app-event-prop-binding> -->
+
+
+<app-atribute-directive></app-atribute-directive>
