--- a/src/app/components/testing-components/event-prop-binding/event-prop-binding.component.html
+++ b/src/app/components/testing-components/event-prop-binding/event-prop-binding.component.html
@@ -1,2 +1,11 @@
 <p>event-prop-binding works!</p>
-<button (click)="clickTest()">Test me</button>
+
+<!-- <button (click)="testTheClick()">Click me</button> -->
+
+<br />
+
+<!-- <input type="text" (input)="testTheInput($event)" /> -->
+
+<!-- <input [disabled]="inputDisabled" type="text" (input)="testTheInput()" /> -->
+
+<input [value]="inputValue" type="text" (input)="testTheInput()" />
