--- a/src/app/components/testing-components/atribute-directive/atribute-directive.component.html
+++ b/src/app/components/testing-components/atribute-directive/atribute-directive.component.html
@@ -1,11 +1,12 @@
 <h1>Chat application</h1>
-<div *ngFor="let user of users">
+
+<!-- <div *ngFor="let user of users">
   <h2>{{ user.name }}</h2>
   <p>
     [ngClass]="{'online-user': user.active, 'offline-user': !user.active}">
     Status: {{ user.active ? "Online" : "Offline" }}
   </p>
-</div>
+</div> -->
 
 <br />
 
@@ -16,7 +17,9 @@
     Status: {{ user.active ? "Online" : "Offline" }}
   </p>
 </div> -->
+
 <!-- sau -->
+
 <h1>NgStyle demo</h1>
 <div *ngFor="let user of users">
   <h2>{{ user.name }}</h2>
