--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,6 @@
 
 <!-- <app-event-prop-binding></app-event-prop-binding> -->
 
+<!-- <app-atribute-directive></app-atribute-directive> -->
 
-<app-atribute-directive></app-atribute-directive>
+<router-outlet> </router-outlet>
